added notes to explain how migrations are made available

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -1,5 +1,9 @@
 #!/bin/sh
 set -e
 
+
+# daemons dont run from the same directory as commands
+# so we copy the migrations from the snap to the snap_data
+
 echo "Copying migrations to SNAP_DATA"
 cp -r "$SNAP/migrations" "$SNAP_DATA/"
